--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -123,7 +123,7 @@
         <div class="container sec-part">
             <p class="sub-heading">Programming concepts</p>
             <p class="detailes">MVC</p>
-            <p class="detailes">OPP</p>
+            <p class="detailes">OOP</p>
             <p class="detailes">Data Structures</p>
         </div>
         <!-- end 2nd sec -->
@@ -132,7 +132,7 @@
         <div class="container third-part">
             <p class="sub-heading">Backend</p>
             <p class="detailes">PHP</p>
-            <p class="detailes">OPP</p>
+            <p class="detailes">OOP</p>
             <p class="detailes">MySQL</p>
             <p class="detailes">Laravel</p>
         </div>
